# fncl

./: CMakeLists.txt  README.md
language-scratches/: MyClass.fncl  MySubclass.fncl  calling-my-class.fncl  function.fncl
src/fncl-embeddable/: fncl_mem.h  fncl_object.c  fncl_object.h  fncl_runtime.c  fncl_runtime.h
src/fncl-tests/: main.c
src/includes/: km_map.h
